[NGD-116] Fix palette drag preview clipping when ancestor has overflo… (#624)
* [NGD-116] Fix palette drag preview clipping when ancestor has overflow:hidden

* improve

* Update changelog

--- a/apps/angular-demo/src/app/palette/palette.component.scss
+++ b/apps/angular-demo/src/app/palette/palette.component.scss
@@ -7,6 +7,7 @@
   background: var(--ngd-ui-bg-primary-default);
   padding: 16px;
   box-sizing: border-box;
+  overflow: hidden;
 
   & .palette {
     flex-direction: column;
